--- a/package.json
+++ b/package.json
@@ -5,29 +5,31 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -c webpack.config.js",
-    "dev": "webpack-dev-server --open -c webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack -c webpack.config.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server -c webpack.config.js",
     "publish": "sh ./build.sh"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.1.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^4.3.0",
-    "html-webpack-plugin": "^4.4.1",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.1",
-    "mini-css-extract-plugin": "^0.11.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "html-webpack-plugin": "^4.5.2",
+    "less-loader": "^11.1.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "clipboard": "^2.0.6",
-    "codemirror": "^5.57.0"
+    "file-loader": "^6.2.0",
+    "monaco-editor": "^0.40.0",
+    "monaco-editor-webpack-plugin": "^7.1.0"
   }
 }
