--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,17 +2,20 @@
   "name": "mz-json",
   "description" : "Simple json format tool",
   "version": "1.6",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "icons": {
-		"16": "./avengers_16.png",
-		"32": "./avengers_32.png",
+    "16": "./avengers_16.png",
+    "32": "./avengers_32.png",
     "48": "./avengers_48.png",
     "64": "./avengers_48.png",
     "128": "./avengers_48.png"
 	},
-  "browser_action": {
+  "action": {
     "default_popup": "./popup.html",
     "default_icon": "./avengers_32.png"
   },
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "background": ["background.js"],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
