--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack -c webpack.config.js",
+    "build": "cross-env NODE_ENV=production && node --max_old_space_size=600 node_modules/webpack/bin/webpack.js -c webpack.config.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server -c webpack.config.js",
     "publish": "sh ./build.sh"
   },
